    pq/worker.go:
    - Add a first cut at a database schema, random uuid generation.
    - Started pq-backed worker.
  * pq/cr_database.sql, pq/worker.go:
    - Commented the database schema & outlined plan for PqWorker.AddKey.
  * cmd/lspgp/main.go, pq/cr_database.sql, pq/dr_database.sql,
    pq/worker.go:
    - Add AGPL license to these files.
    - Removed redundant long_id and short_id from pub_key.
  * pgp.go:
    - Added public key merge functions we'll need for keyserver updates.
  * pq/cr_database.sql, pq/worker.go, pq/worker_test.go:
    - Add simple db connection test, fixed a few sql and query errors.
  * errors.go, pgp.go, pq/worker.go, pq/worker_test.go:
    - Several postgres database errors fixed.
    - Using flags to configure postgres test database connection.
  * errors.go, pgp.go, pq/cr_database.sql, pq/dr_database.sql,
    pq/worker.go, pq/worker_test.go:
    - Removed key_log table, storing keyrings in binary form in pub_key.
    - Updated unit test to normalize armored keyrings to eliminate
      variations in armor from test conditions.
    - Check for short key ID collisions.
  * cmd/hockeypuck/main.go, pq/worker.go:
    - Main hockeypuck executable now starts a postgres-backed server.
    - Added flag parsing.
    - Hey, it kind of works now.
  * === added directory debian/source, debian/compat, debian/control,
    debian/copyright, debian/rules, debian/source/format, Makefile:
    - Add debian packaging. LP: #1040379
  * debian/rules, Makefile:
    - Place binary dependencies in debian source tarball for lp builders.
  * === added directory cmd/pktdump, cmd/pktdump/main.go,
    debian/control:
    - Add packet dump utility to help with diagnostics and research
      LP: #1040378
    - Eliminate scm tools from debian build deps.
  * === added directory mgo, Makefile, mgo/worker.go,
    mgo/worker_test.go:
    - Add mongodb worker backend.

 -- Casey Marshall <casey.marshall@gmail.com>  Thu, 30 Aug 2012 00:04:38 -0500